# utz

./: .gitignore  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml  pages.yml
scripts/: gen-presets.sh
utz/: Cargo.toml
utz-bench-cli/: Cargo.toml  build.rs
utz-bench-cli/src/: main.rs
utz-bench-common/: Cargo.toml  build.rs
utz-bench-common/src/: lib.rs
utz-bench-common/tests/: encodings_agree.rs
utz-bench-firmware/: Cargo.toml  README.md  build.rs  espflash.toml  flash-with-data.sh  partitions.csv  rust-toolchain.toml
utz-bench-firmware/.cargo/: config.toml
utz-bench-firmware/src/: main.rs
utz-build/: Cargo.toml
utz-build/demo/: line-overlap-demo.html
utz-build/examples/: accuracy.rs  amscan.rs  bench.rs  csr_sweep.rs  density_compare.rs  density_probe.rs  dominant_cost.rs  fixedwidth_size.rs  geoquant.rs  grid2mem.rs  grid_bench.rs  gridsweep.rs  imagepack_size.rs  pip_bench.rs  polygrid_probe.rs  quant_size.rs  rdp_sweep.rs  roundtrip.rs  size_table.rs  visualize.rs
utz-build/src/: config.rs  density.rs  download.rs  encode.rs  error.rs  grid.rs  lib.rs  loader.rs  main.rs  topo.rs  types.rs  viz.rs
utz-build/src/cmd/: accuracy.rs  amscan.rs  bench.rs  csr_sweep.rs  density_compare.rs  density_probe.rs  dominant_cost.rs  encode.rs  fixedwidth_size.rs  geoquant.rs  grid2mem.rs  grid_bench.rs  gridsweep.rs  imagepack_size.rs  mod.rs  pip_bench.rs  polygrid_probe.rs  quant_clean.rs  quant_size.rs  rdp_sweep.rs  roundtrip.rs  size_table.rs  visualize.rs  window_sweep.rs
utz-build/templates/: live_overlay_template.html  london_sweep_template.html  sweep_overlay_template.html  webdist_index.html
utz-common/: Cargo.toml
utz-common/src/: lib.rs
utz-data-accurate/: Cargo.toml
utz-data-accurate/src/: lib.rs
utz-data-balanced/: Cargo.toml
utz-data-balanced/src/: lib.rs
utz-data-compact/: Cargo.toml
utz-data-compact/src/: lib.rs
utz-data-nano/: Cargo.toml
utz-data-nano/src/: lib.rs
utz-data-tiny/: Cargo.toml
utz-data-tiny-static/: Cargo.toml
utz-data-tiny-static/src/: lib.rs
utz-data-tiny/src/: lib.rs
utz-encode/: Cargo.toml
utz-encode/src/: clean.rs  encode.rs  error.rs  grid.rs  lib.rs  topo.rs  types.rs  validate.rs  wasm.rs
utz-simplify/: Cargo.toml
utz-simplify/src/: lib.rs  wasm.rs
utz/src/: decompress.rs  finder.rs  format.rs  lib.rs  pip.rs
utz/tests/: accurate.rs  balanced.rs  compact.rs  eager_slice.rs  nano.rs  presets_multi.rs  tiny.rs  tiny_static.rs
