[workspace]
resolver = "2"
members = [
    "utz",
    "utz-build",
    "utz-data-tiny",
    "utz-data-tiny-static",
    "utz-data-compact",
    "utz-data-balanced",
    "utz-data-accurate",
    "utz-encode",
    "utz-simplify",
    "utz-bench-common",
    "utz-bench-cli",
]
# Xtensa target — needs the esp toolchain (espup); built standalone, see its README
exclude = ["utz-bench-firmware"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "" # TBD

[workspace.dependencies]
geo = "0.32"
geo-types = "0.7"
anyhow = "1"

# utz-bench-cli's build.rs runs the encoder (codec-none twins via the
# utz-build builder API) — at the default build-override opt-level 0 the
# weighted RDP pass takes minutes, so optimize build scripts and their deps
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
