[workspace]
resolver = "2"
members = [
    "utz",
    "utz-common",
    "utz-build",
    "utz-data-tiny",
    "utz-data-tiny-static",
    "utz-data-compact",
    "utz-data-balanced",
    "utz-data-accurate",
    "utz-encode",
    "utz-simplify",
    "utz-bench-common",
    "utz-bench-cli",
]
# Xtensa target — needs the esp toolchain (espup); built standalone, see its README
exclude = ["utz-bench-firmware"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "" # TBD

[workspace.dependencies]
geo = "0.32"
geo-types = "0.7"
# error derives (Display/Error/From) — the workspace error-type pattern;
# no_std-capable, so the device crate shares it
derive_more = { version = "2", default-features = false, features = ["display", "error", "from"] }
# no_std, macro-only; 4-aligned embedding for any asset a Finder borrows in
# place. Drop once RFC 3806's `static_align` (#[align(N)] on statics)
# stabilizes: https://github.com/rust-lang/rfcs/pull/3806
include_bytes_aligned = "0.2.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# TODO(pedantic): each allow below is pending its one-at-a-time discussion;
# remove the entry as each lint gets resolved (see the truncation precedent:
# cast_possible_truncation is fully fixed/#[expect]ed, so it is NOT listed).
many_single_char_names = "allow"  # lint 6/9 (~10)
too_many_lines = "allow"          # lint 7/9 (~5)
inline_always = "allow"           # lint 8/9 (~3)
cast_ptr_alignment = "allow"      # lint 9/9 (~2)

# utz-bench-common's build.rs runs the encoder (codec-none twins via the
# utz-build builder API) — at the default build-override opt-level 0 the
# weighted RDP pass takes minutes, so optimize build scripts and their deps
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
