[package]
name = "utz-bench-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

# Host-side lookup bench: the preset shapes by name (baked in via the utz
# preset features), their codec-none twins (generated in build.rs through the
# consumer builder API), or any .utz container file.
[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
utz = { path = "../utz", features = [
    "std", "gzip", "ruzstd", "brotli", "xz",
    # presets, for benching by shape name
    "tiny", "tiny-static", "compact", "balanced", "accurate",
    # the build.rs-generated custom shapes span all three geometry decoders
    "custom", "geom-varint", "geom-fixed", "geom-image", "geom-coarse",
] }
utz-bench-common = { path = "../utz-bench-common" }

[build-dependencies]
utz-build = { path = "../utz-build" }
