[package]
name = "utz-bench-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

# Host-side lookup bench: the preset shapes by name (baked in via the utz
# preset features), their codec-none twins (utz-bench-common::assets), or any
# .utz container file.
[dependencies]
derive_more = { workspace = true }
clap = { version = "4", features = ["derive"] }
# the geom-* decoders for the custom shapes come via utz-bench-common
utz = { path = "../utz", features = [
    "std", "gzip", "ruzstd", "brotli", "xz",
    # presets, for benching by shape name
    "tiny", "tiny-static", "compact", "balanced", "accurate",
    # arbitrary .utz file paths
    "custom",
] }
utz-bench-common = { path = "../utz-bench-common" }
