[package]
name = "utz-bench-common"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

# Shared lookup-bench harness for utz-bench-cli (host) and utz-bench-firmware
# (ESP32-S3). no_std + alloc; the time source is injected by the caller.
[dependencies]
utz = { path = "../utz", default-features = false, features = ["alloc", "custom"] }
