[package]
name = "utz-build"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

# Build/exploration crate: encoder, measurements, viz. Deps here do NOT leak into
# the runtime `utz` crate (which stays lean / no_std-friendly).
[dependencies]
anyhow = { workspace = true }
geo = { workspace = true }
geo-types = { workspace = true }
# temporary: reading the prebuilt .fgb during exploration (to be replaced by a
# GeoJSON parser + downloader per PLAN.md).
flatgeobuf = "5.0"
geozero = "0.14"
# codecs for the size measurements
zstd = "0.13"
brotli = "8.0"
lzma-rust2 = { version = "0.16", features = ["xz", "encoder"] }
miniz_oxide = "0.8"

[dev-dependencies]
utz = { path = "../utz", features = ["std"] }
