[package]
name = "utz-build"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

# Build/exploration crate: encoder, measurements, viz. Deps here do NOT leak into
# the runtime `utz` crate (which stays lean / no_std-friendly).
[dependencies]
anyhow = { workspace = true }
geo = { workspace = true }
geo-types = { workspace = true }
# tzf-rs's PIP crate (tidwall/geometry port) — pip_bench contender (PLAN.md sec 13)
geometry-rs = "0.3"
# polyline simplification menu, shared with the viz HTML via WASM (PLAN.md sec 14.8)
utz-simplify = { path = "../utz-simplify" }
# encoder core (topology + quantization + grid + container), split out so it
# also compiles to WASM for the webdist viewer (see utz-encode/src/lib.rs)
utz-encode = { path = "../utz-encode", features = ["zstd"] }
# temporary: reading the prebuilt .fgb during exploration (to be replaced by a
# GeoJSON parser + downloader per PLAN.md).
flatgeobuf = "5.0"
geozero = "0.14"
# codecs for the size measurements
zstd = "0.13"
brotli = "8.0"
lzma-rust2 = { version = "0.16", default-features = false, features = ["xz", "encoder", "optimization"] }
miniz_oxide = "0.8"


# GeoJSON pipeline (replaces the temporary FGB loader; PLAN.md sec 5)
ureq = "2.12"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiff = "0.11"
# the utz-build CLI (src/main.rs, one module per subcommand under src/cmd/)
clap = { version = "4", features = ["derive"] }
# runtime crate, exercised by roundtrip/visualize/bench subcommands; pure-Rust
# zstd backend (ruzstd) here — the zstd-sys backend is compile-checked
# separately (cargo check -p utz --features std,zstd-sys)
utz = { path = "../utz", features = ["std", "custom", "gzip", "ruzstd", "brotli", "xz", "geom-varint", "geom-fixed", "geom-image"] }
