[package]
name = "utz-data-tiny-static"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

# Preset data crate (PLAN.md §11): one CI-generated `.utz` asset as a static.
# The asset is gitignored and regenerated, never committed (§5 "sources are
# fetched"); publishing is a CI job using `cargo publish --allow-dirty` with
# generation logs + checksums attached to a GitHub release (§11 provenance).

[dependencies]
# 4-aligned embedding: this is the one preset borrowed in place by
# Finder::from_static, so keep it alignment-proof against recipe changes
# (only EagerImage geometry actually requires it; today's varint does not)
include_bytes_aligned = { workspace = true }

[lints]
workspace = true
