[package]
name = "utz-encode"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

# `lib` for the builder (utz-build). The webdist viewer's live container
# encode (PLAN.md §12) wants a WASM cdylib of the same encoder (plus the
# utz-simplify exports it links in) — requested per-build, NOT via crate-type:
#   cargo rustc -p utz-encode --release --target wasm32-unknown-unknown --crate-type cdylib
# (a `cdylib` crate-type would give every build unhashed artifact names, which
# collide when the workspace builds utz-encode twice: as a member and as a
# build-dependency via utz-bench-cli's build.rs → utz-build)
[lib]
crate-type = ["lib"]

[features]
# zstd wraps C libzstd (zstd-sys) — fine natively, a toolchain headache on
# wasm32-unknown-unknown. utz-build enables it; the wasm build leaves it off
# (Codec::Zstd then panics with a clear message).
zstd = ["dep:zstd"]

[dependencies]
derive_more = { workspace = true }
# simplification menu + DensityWeight (shared with the viewer via this cdylib)
utz-simplify = { path = "../utz-simplify" }
# codecs (all pure Rust except optional zstd)
miniz_oxide = "0.8"
brotli = "8.0"
lzma-rust2 = { version = "0.16", default-features = false, features = ["xz", "encoder", "optimization"] }
zstd = { version = "0.13", optional = true }

[lints]
workspace = true
