[package]
name = "utz"
version = "0.0.0"
edition.workspace = true
license.workspace = true

# Runtime crate — kept lean / no_std-friendly. geo is a DEV-dependency only
# (PIP oracle). Codec features (PLAN.md §7): each compiles in the decoder for
# one codec byte. `gzip`/`ruzstd` are pure-Rust and no_std+alloc clean;
# `brotli`/`xz` currently pull `std` (their no_std modes need custom io/alloc
# plumbing — upgrade path noted in decompress.rs); `zstd-sys` is C + std.
[features]
# Two mandatory, at-least-one-of choices (§11) — forgetting one is a
# compile_error! whose message is the onboarding. default = [] on purpose.
default = []

# ---- choice 1: data tier ---------------------------------------------------
# Presets bake one CI-generated asset + the codec to read it (`alloc` comes
# along for decompression). `custom` is a marker: bring your own asset,
# generated with utz-build (§11). micro/balanced/accurate land once their
# recipes are pinned (§14.5).
nano = ["dep:utz-data-nano", "alloc", "gzip"]
custom = []

# ---- choice 2: environment ladder (§11): std ⊃ alloc ⊃ core -----------------
# Strict supersets, so a feature union across the tree resolves upward.
# `core` gates nothing extra — it's the deliberate bare-metal marker
# (uncompressed assets, zero-copy `from_static`, `lookup_coarse`).
core = []
alloc = []
std = ["alloc"]

# ---- codec decoders (additive, §7) ------------------------------------------
gzip = ["dep:miniz_oxide", "alloc"]
ruzstd = ["dep:ruzstd", "alloc"]
zstd-sys = ["dep:zstd", "std"]
brotli = ["dep:brotli-decompressor", "std"]
xz = ["dep:lzma-rust2", "std"]

[package.metadata.docs.rs]
# representative set (§11): the mandatory choices can't be defaulted, so
# docs.rs picks one of each + the decoders
features = ["std", "custom", "gzip", "ruzstd", "brotli", "xz"]

[dependencies]
# no default features: keeps the derives no_std (Error derive = core::error::Error)
derive_more = { version = "2", default-features = false, features = ["display", "error"] }
miniz_oxide = { version = "0.8", optional = true, default-features = false, features = ["with-alloc"] }
ruzstd = { version = "0.8", optional = true, default-features = false }
zstd = { version = "0.13", optional = true }
brotli-decompressor = { version = "5.0", optional = true }
lzma-rust2 = { version = "0.16", optional = true, default-features = false, features = ["std", "xz"] }
utz-data-nano = { path = "../utz-data-nano", optional = true }

[dev-dependencies]
geo = { workspace = true }
geo-types = { workspace = true }

# No build.rs / build-dependencies by design (PLAN.md sec 11): preset data ships
# as utz-data-* crates; custom assets are generated consumer-side via utz-build.
