[package]
name = "utz"
version = "0.0.0"
edition.workspace = true
license.workspace = true

# Runtime crate — kept lean / no_std-friendly. geo is a DEV-dependency only
# (PIP oracle). Codec features (PLAN.md §7): each compiles in the decoder for
# one codec byte. `gzip`/`ruzstd`/`brotli`/`xz` are pure-Rust and no_std+alloc
# clean; `zstd-sys` is C + std. NOTE: lzma-rust2's `std` feature must stay OFF
# tree-wide — with it on, the crate's Read/Write re-exports turn pub(crate)
# and utz's xz decode arm stops compiling (decompress.rs).
[features]
# Two mandatory, at-least-one-of choices (§11) — forgetting one is a
# compile_error! whose message is the onboarding. default = [] on purpose.
default = []

# ---- choice 1: data tier ---------------------------------------------------
# Presets bake one CI-generated asset + the codec to read it (`alloc` comes
# along for decompression); recipes are pinned in §14.5. Naming grammar: a
# bare tier name is the compressed asset (lazy/eager modes), `<tier>-static`
# is the same decoded container shipped flat — zero-copy via `from_static`,
# no alloc, no codec, `core`-rung capable. `custom` is a marker: bring your
# own asset, generated with utz-build (§11).
tiny = ["dep:utz-data-tiny", "alloc", "gzip"]
tiny-static = ["dep:utz-data-tiny-static"]
compact = ["dep:utz-data-compact", "alloc", "xz"]
balanced = ["dep:utz-data-balanced", "alloc", "brotli"]
accurate = ["dep:utz-data-accurate", "alloc", "brotli"]
custom = []

# ---- choice 2: environment ladder (§11): std ⊃ alloc ⊃ core -----------------
# Strict supersets, so a feature union across the tree resolves upward.
# `core` gates nothing extra — it's the deliberate bare-metal marker
# (uncompressed assets, zero-copy `from_static`, `lookup_coarse`).
core = []
alloc = []
std = ["alloc"]

# ---- codec decoders (additive, §7) ------------------------------------------
gzip = ["dep:miniz_oxide", "alloc"]
ruzstd = ["dep:ruzstd", "alloc"]
zstd-sys = ["dep:zstd", "std"]
brotli = ["dep:brotli-decompressor", "alloc"]
xz = ["dep:lzma-rust2", "alloc"]

[package.metadata.docs.rs]
# representative set (§11): the mandatory choices can't be defaulted, so
# docs.rs picks one of each + the decoders
features = ["std", "custom", "gzip", "ruzstd", "brotli", "xz"]

[dependencies]
# no default features: keeps the derives no_std (Error derive = core::error::Error)
derive_more = { version = "2", default-features = false, features = ["display", "error"] }
miniz_oxide = { version = "0.8", optional = true, default-features = false, features = ["with-alloc"] }
ruzstd = { version = "0.8", optional = true, default-features = false }
zstd = { version = "0.13", optional = true }
# no-stdlib mode: no default `std` feature; utz supplies a global-allocator
# shim (decompress.rs), keeping the decoder alloc-clean → preset-eligible
brotli-decompressor = { version = "5.0", optional = true, default-features = false }
lzma-rust2 = { version = "0.16", optional = true, default-features = false, features = ["xz"] }
utz-data-tiny = { path = "../utz-data-tiny", optional = true }
utz-data-tiny-static = { path = "../utz-data-tiny-static", optional = true }
utz-data-compact = { path = "../utz-data-compact", optional = true }
utz-data-balanced = { path = "../utz-data-balanced", optional = true }
utz-data-accurate = { path = "../utz-data-accurate", optional = true }

[dev-dependencies]
geo = { workspace = true }
geo-types = { workspace = true }

# No build.rs / build-dependencies by design (PLAN.md sec 11): preset data ships
# as utz-data-* crates; custom assets are generated consumer-side via utz-build.
