[package]
name = "utz"
version = "0.0.0"
edition.workspace = true
license.workspace = true

# Runtime crate — kept lean / no_std-friendly. geo is a DEV-dependency only
# (PIP oracle). Codec features (PLAN.md §7): each compiles in the decoder for
# one codec byte. `gzip`/`ruzstd`/`brotli`/`xz` are pure-Rust and no_std+alloc
# clean; `zstd-sys` is C + std. NOTE: lzma-rust2's `std` feature must stay OFF
# tree-wide — with it on, the crate's Read/Write re-exports turn pub(crate)
# and utz's xz decode arm stops compiling (decompress.rs).
[features]
# Three mandatory, at-least-one-of choices (§11) — forgetting one is a
# compile_error! whose message is the onboarding. default = [] on purpose.
default = []

# ---- choice 1: data tier ---------------------------------------------------
# Presets bake one CI-generated asset + the codec to read it (`alloc` comes
# along for decompression); recipes are pinned in §14.5. Naming grammar: a
# bare tier name is the compressed asset (lazy/eager modes), `<tier>-static`
# is the same decoded container shipped flat — zero-copy via `from_static`,
# no alloc, no codec, `core`-rung capable. `custom` is a marker: bring your
# own asset, generated with utz-build (§11).
# Each preset also enables the geometry decoder its recipe uses (all preset
# recipes are delta+varint today), so `tiny` alone is a complete build.
tiny = ["dep:utz-data-tiny", "alloc", "gzip", "geom-varint"]
tiny-static = ["dep:utz-data-tiny-static", "geom-varint"]
compact = ["dep:utz-data-compact", "alloc", "xz", "geom-varint"]
balanced = ["dep:utz-data-balanced", "alloc", "brotli", "geom-varint"]
accurate = ["dep:utz-data-accurate", "alloc", "brotli", "geom-varint"]
custom = []

# ---- choice 2: environment ladder (§11): std ⊃ alloc ⊃ core -----------------
# Strict supersets, so a feature union across the tree resolves upward.
# `core` gates nothing extra — it's the deliberate bare-metal marker
# (uncompressed assets, zero-copy `from_static`, `lookup_coarse`).
core = []
alloc = []
std = ["alloc"]

# ---- choice 3: geometry decoders (§4/§15) -----------------------------------
# One per GeomEncoding; a container whose geom byte has no compiled decoder
# is refused at load (Error::Geometry). Presets carry theirs; `custom` users
# pick the one(s) their assets use. `geom-image` is little-endian-only
# (typed coordinate slices) — enabling it on a big-endian target is a
# compile_error.
geom-varint = []
geom-fixed = []
geom-image = []
# grid-only assets (GeomEncoding::Coarse): no PIP code at all; lookup()
# answers at cell precision (the asset's precision); endian-independent
geom-coarse = []

# ---- codec decoders (additive, §7) ------------------------------------------
gzip = ["dep:miniz_oxide", "alloc"]
ruzstd = ["dep:ruzstd", "alloc"]
zstd-sys = ["dep:zstd", "std"]
brotli = ["dep:brotli-decompressor", "alloc"]
xz = ["dep:lzma-rust2", "alloc"]

[package.metadata.docs.rs]
# representative set (§11): the mandatory choices can't be defaulted, so
# docs.rs picks one of each + the decoders
features = ["std", "custom", "gzip", "ruzstd", "brotli", "xz", "geom-varint", "geom-fixed", "geom-image", "geom-coarse"]

[dependencies]
# no default features: keeps the derives no_std (Error derive = core::error::Error)
derive_more = { workspace = true }
miniz_oxide = { version = "0.8", optional = true, default-features = false, features = ["with-alloc"] }
ruzstd = { version = "0.8", optional = true, default-features = false }
zstd = { version = "0.13", optional = true }
# no-stdlib mode: no default `std` feature; utz supplies a global-allocator
# shim (decompress.rs), keeping the decoder alloc-clean → preset-eligible
brotli-decompressor = { version = "5.0", optional = true, default-features = false }
lzma-rust2 = { version = "0.16", optional = true, default-features = false, features = ["xz"] }
utz-data-tiny = { path = "../utz-data-tiny", optional = true }
utz-data-tiny-static = { path = "../utz-data-tiny-static", optional = true }
utz-data-compact = { path = "../utz-data-compact", optional = true }
utz-data-balanced = { path = "../utz-data-balanced", optional = true }
utz-data-accurate = { path = "../utz-data-accurate", optional = true }
# re-exported for embedding EagerImage assets 4-aligned (see workspace toml)
include_bytes_aligned = { workspace = true }

[dev-dependencies]
utz-common = { path = "../utz-common" }
geo = { workspace = true }
geo-types = { workspace = true }

# No build.rs / build-dependencies by design (PLAN.md sec 11): preset data ships
# as utz-data-* crates; custom assets are generated consumer-side via utz-build.

[lints]
workspace = true
